--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/html-elements": "0.4.2",
     "@expo/metro-runtime": "~4.0.1",
     "@gluestack-ui/button": "^1.0.14",
+    "@gluestack-ui/divider": "^0.1.10",
     "@gluestack-ui/icon": "^0.1.27",
+    "@gluestack-ui/image": "^0.1.17",
+    "@gluestack-ui/link": "^0.1.29",
     "@gluestack-ui/nativewind-utils": "^1.0.26",
     "@gluestack-ui/overlay": "^0.1.22",
     "@gluestack-ui/toast": "^1.0.9",
@@ -21,6 +25,7 @@
     "expo-router": "~4.0.20",
     "expo-status-bar": "~2.0.1",
     "gluestack-ui": "^0.7.22",
+    "lucide-react-native": "^0.487.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -29,10 +34,12 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-svg": "^15.11.2",
     "react-native-web": "~0.19.13",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@tanstack/eslint-plugin-query": "^5.71.5",
     "@types/react": "~18.3.12",
     "typescript": "^5.3.3"
   },
