--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@expo/metro-runtime": "~4.0.1",
     "@gluestack-ui/button": "^1.0.14",
     "@gluestack-ui/divider": "^0.1.10",
+    "@gluestack-ui/form-control": "^0.1.19",
     "@gluestack-ui/icon": "^0.1.27",
     "@gluestack-ui/image": "^0.1.17",
     "@gluestack-ui/input": "^0.1.38",
@@ -22,6 +23,7 @@
     "@gluestack-ui/nativewind-utils": "^1.0.26",
     "@gluestack-ui/overlay": "^0.1.22",
     "@gluestack-ui/toast": "^1.0.9",
+    "@hookform/resolvers": "^5.0.1",
     "expo": "~52.0.42",
     "expo-router": "~4.0.20",
     "expo-status-bar": "~2.0.1",
@@ -37,6 +39,7 @@
     "react-native-svg": "^15.11.2",
     "react-native-web": "~0.19.13",
     "tailwindcss": "^3.4.17",
+    "zod": "^3.24.3",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
