--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.55.0",
     "react-native": "0.76.8",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-svg": "^15.11.2",
