--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@gluestack-ui/link": "^0.1.29",
     "@gluestack-ui/nativewind-utils": "^1.0.26",
     "@gluestack-ui/overlay": "^0.1.22",
-    "@gluestack-ui/toast": "^1.0.9",
     "@hookform/resolvers": "^5.0.1",
     "@legendapp/motion": "^2.4.0",
     "expo": "~52.0.42",
@@ -41,6 +40,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-svg": "^15.11.2",
     "react-native-web": "~0.19.13",
+    "react-native-webview": "13.12.5",
     "tailwindcss": "^3.4.17",
     "zod": "^3.24.3",
     "zustand": "^5.0.3"
