Added Printing and sharing Functionalities

--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "@hookform/resolvers": "^5.0.1",
     "@legendapp/motion": "^2.4.0",
     "expo": "~52.0.42",
+    "expo-file-system": "~18.0.12",
+    "expo-print": "~14.0.3",
     "expo-router": "~4.0.20",
+    "expo-sharing": "~13.0.1",
     "expo-status-bar": "~2.0.1",
     "gluestack-ui": "^0.7.22",
     "lucide-react-native": "^0.487.0",
