--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@gluestack-ui/overlay": "^0.1.22",
     "@hookform/resolvers": "^5.0.1",
     "@legendapp/motion": "^2.4.0",
+    "@react-navigation/native": "^7.1.6",
     "expo": "~52.0.42",
     "expo-file-system": "~18.0.12",
     "expo-print": "~14.0.3",
